test/libyul/yulSyntaxTests/tstore_as_identifier_post_cancun.yul
{
    function tstore() {}
}
// ====
// EVMVersion: >=cancun
// ----
// ParserError 5568: (15-21): Cannot use builtin function name "tstore" as identifier name.
